--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Full-stack growth professional specializing in SEO, front-end development, and data-driven marketing. Generated 18 MQLs through strategic content at CloudNuro.">
     <meta name="keywords" content="Growth engineer, SEO strategist, full-stack developer, Chidvilas Kankat">
     <link rel="icon" type="image/x-icon" href="/Resource/android-chrome-192x192.png">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
