--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Full-stack growth professional specializing in SEO, front-end development, and data-driven marketing. Generated 18 MQLs through strategic content at CloudNuro.">
     <meta name="keywords" content="Growth engineer, SEO strategist, full-stack developer, Chidvilas Kankat">
-    <link rel="icon" type="image/x-icon" href="/Resource/android-chrome-192x192.png">
+    <link rel="icon" type="image/x-icon" href="./android-chrome-192x192.png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Tag Manager -->
@@ -39,7 +39,7 @@
         <div class="sidebar-content">
             <div class="profile-photo-container">
                 <div class="profile-photo">
-                    <img src="/Resource/chidvilaskankat.jpeg" alt="Chidvilas Kankat">
+                    <img src="./chidvilaskankat.jpeg" alt="Chidvilas Kankat">
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                     <span class="full-name">CHIDVILAS KANKAT</span>
                 </h1>
                 <div class="profile-hero">
-                    <img src="/Resource/chidvilaskankat.jpeg" alt="Chidvilas Kankat" class="hero-image">
+                    <img src="./chidvilaskankat.jpeg" alt="Chidvilas Kankat" class="hero-image">
                 </div>
                 <div class="titles">
                     <div class="title-line">GROWTH ENGINEER</div>
@@ -134,7 +134,7 @@
             </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
