--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
     <title>Resume - Chidvilas Kankat | GTM Specialist</title>
     <meta name="description"
         content="Professional resume of Chidvilas Kankat - GTM Specialist at CloudNuro with expertise in content strategy, SEO, and development.">
-    <link rel="icon" type="image/x-icon" href="/Resource/android-chrome-192x192.png">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="./android-chrome-192x192.png">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -38,7 +38,7 @@
         <div class="sidebar-content">
             <div class="profile-photo-container">
                 <div class="profile-photo">
-                    <img src="/Resource/chidvilaskankat.jpeg" alt="Chidvilas Kankat">
+                    <img src="./chidvilaskankat.jpeg" alt="Chidvilas Kankat">
                 </div>
             </div>
 
@@ -204,7 +204,7 @@
         </div>
     </main>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
