--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <title>Contact Chidvilas Kankat - Growth Engineer</title>
     <meta name="description"
         content="Get in touch for collaborations, projects, or growth strategy discussions. Based in Hyderabad.">
-    <link rel="icon" type="image/x-icon" href="/Resource/android-chrome-192x192.png">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="./android-chrome-192x192.png">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -38,7 +38,7 @@
         <div class="sidebar-content">
             <div class="profile-photo-container">
                 <div class="profile-photo">
-                    <img src="/Resource/chidvilaskankat.jpeg" alt="Chidvilas Kankat">
+                    <img src="./chidvilaskankat.jpeg" alt="Chidvilas Kankat">
                 </div>
             </div>
 
@@ -153,8 +153,8 @@
         </div>
     </main>
 
-    <script src="/script.js"></script>
-    <script src="/contact.js"></script>
+    <script src="./script.js"></script>
+    <script src="./contact.js"></script>
 </body>
 
 </html>
