--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="icon" type="image/x-icon" href="./android-chrome-192x192.png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- redirect -->
+     <script>
+  if (window.location.pathname.endsWith('/index.html')) {
+    window.location.replace(window.location.origin);
+  }
+</script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
